--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "postcss-pxtorem": "^4.0.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
